2011-01-22  Janne Blomqvist  <jb@gcc.gnu.org>

	PR libfortran/46267
	* config.h.in: Regenerated.
	* configure: Regenerated.
	* configure.ac: Check presence of strerror_r.
	* intrinsics/gerror.c (gerror): Use gf_strerror, modify logic.
	* io/unix.c (get_oserror): Remove.
	* libgfortran.h (gf_strerror): Add prototype.
	(get_oserror): Remove prototype.
	* runtime/error.c (gf_strerror): New function.
	(os_error): Use gf_strerror instead of get_oserror.
	(generate_errror): Likewise.

2011-01-17  Janne Blomqvist  <jb@gcc.gnu.org>

	PR libfortran/47296
	* io/unix.c (tempfile): Set opp->file and opp->file_len also if an
	error occurs.

2011-01-16  Jakub Jelinek  <jakub@redhat.com>

	PR fortran/46625
	* io/write_float.def (DTOAQ): Use quadmath_flt128tostr
	instead of quadmath_dtoa.
	* io/transfer128.c (tmp1, tmp2): New variables, bring in
	strtoflt128 and quadmath_flt128tostr.
	(transfer_real128, transfer_real128_write, transfer_complex128,
	transfer_complex128_write): Remove tmp1/tmp2 variables.
	* io/read.c (convert_real): Use strtoflt128 instead of
	quadmath_strtopQ, adjust for the changed arguments and return
	value.

2011-01-14  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/47296
	* io/unix.c (unpack_filename): Return non-zero if the filename passed
	in is NULL.

2011-01-04  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/47154
	* io/list_read.c (namelist_read): Remove calls to hit_eof to avoid the
	duplicate calls via next_record.


Copyright (C) 2011 Free Software Foundation, Inc.

Copying and distribution of this file, with or without modification,
are permitted in any medium without royalty provided the copyright
notice and this notice are preserved.